--- a/public/tt.html
+++ b/public/tt.html
@@ -30,7 +30,8 @@
             }
             h += A
         }
-        for (i = S = ""; i < 240; X[i] = Z[i] |= ++i % A < 2 | i > 228) i % A ? 0 : S += "<br>", S += X[i] ? "■" : "＿";
+        for (i = S = ""; i < 240; X[i] = Z[i] |= ++i % A < 2 | i > 228)
+            i % A ? 0 : S += "<br>", S += X[i] ? "■" : "＿";
         document.body.innerHTML = S + P;
         Z[5] || setTimeout(Y, 99 - P)
     }
